# lidar-mapping-pipeline

./: .gitignore  README.md
ESP32-UART-UDP-Bridge/: .gitignore  CMakeLists.txt
ESP32-UART-UDP-Bridge/main/: Kconfig.projbuild  main.c
Python-Debug/: radar-udp.py  radar.py
STM32-Lidar-Scanner/: .cproject  .mxproject  .project  STM32-Lidar-Scanner.ioc
STM32-Lidar-Scanner/Core/Inc/: IMUSensor.hpp  LidarParser.hpp  Point.hpp  Simulation.hpp  StepperMotor.hpp  app_main.h  main.h  stm32f4xx_it.h
STM32-Lidar-Scanner/Core/Src/: IMUSensor.cpp  LidarParser.cpp  Simulation.cpp  StepperMotor.cpp  app_main.cpp  dma.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
lidar_visualizer/: Cargo.toml
lidar_visualizer/src/: camera.rs  context.rs  gpu.rs  gui.rs  main.rs  network.rs  shader.wgsl  types.rs
