[package]
name = "lidar_visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "29.0.1"
winit = "0.30.13"
pollster = "0.4"
glam = { version = "0.33.1", features = ["bytemuck"]}
bytemuck = {version = "1", features = ["derive"]}
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.29.0"

futures-util = "0.3"